--- a/R-markdown- world_airport.Rmd
+++ b/R-markdown- world_airport.Rmd
@@ -62,31 +62,17 @@ Le choix des pays dans le developpemt des infrastructures aeroportuaires depend 
 # **Section 2: L'impact des revenus nationaux sur les infrastructures aeroportuaires**
 
   L'Analyse en Composantes Principales (ACP) est une méthode statistique utilisée pour analyser et réduire la dimensionnalité d'un jeu de données tout en préservant autant que possible l'information. Elle est souvent utilisée dans des contextes où les données sont de haute dimension, c'est-à-dire quand il y a de nombreuses variables (caractéristiques) qui peuvent être difficiles à analyser ou à visualiser.
-Pour cette étude, nous avons combiné plusieurs ensembles de données :
+Pour cette étude, nous avons combiné plusieurs ensembles de données sur les aéroports, les codes ISO (pour utiliser comme un clé pour combiner les data), les revenus nationales par habitant (pour évaluer la richesse économique des pays) et le trafic de passagers dans top 50 aéroports (données spécifiques aux 50 principaux aéroports extraites de Wikipedia, en raison de limitations d’accès aux données complètes).
 
-- "Airports" – informations sur plus de 75 000 aéroports à l'échelle mondiale.
-- "Iso_table" - Codes ISO des pays – utilisés comme clé pour fusionner les données avec left_join.
-- "Income_table" - Revenu national par habitant – pour évaluer la richesse économique des pays.
-- "Passagers" – données spécifiques aux 50 principaux aéroports extraites de Wikipedia, en raison de limitations d’accès aux données complètes.
-
-  Après avoir combiné et reformaté tous les ensembles de données, nous avons décidé d'effectuer une analyse ACP à partir de ces variables :
-« National.income », “runway_length_ft”, “runway_width_ft”, et “passengers”. En utilisant ces variables, nous avons cherché à explorer les relations entre ces variables afin de déterminer si les pays les plus riches investissent davantage dans leurs aéroports et si cela se traduit par un trafic plus grand.
-
-## **Analyse des résultats de l'ACP**  
-
-L’ACP révèle que les deux premières composantes principales expliquent 69,08% de la variance totale, ce qui permet de capturer efficacement les principales tendances des données.  
-
-  En utilisant l'analyse univarié, l’analyse visuelle met en évidence une différence marquée entre les 50 top aéroports et l’ensemble des 75 000 aéroports mondiaux. Les grandes infrastructures, notamment des pistes plus longues, sont concentrées dans les principaux aéroports, tandis que la majorité des aéroports mondiaux présentent des pistes plus courtes et homogènes. Cela signifie que les top aéroports ont des pistes plus longues, ce qui indique plusieurs observations possibles : leurs pistes sont conçues pour les avions transcontinentaux qui ont besoin de pistes plus longues pour décoller et atterrir ; ils investissent davantage dans l'infrastructure pour construire des « hubs » pour toutes sortes de vols. 
+ En utilisant les variables sur les revenus, les longeurs et largeurs de pistes et les données sur le nombre des passagers, nous avons cherché à explorer les relations entre ces variables afin de déterminer si les pays les plus riches investissent davantage dans leurs aéroports et si cela se traduit par un trafic plus grand. L’ACP révèle que les deux premières composantes principales expliquent 69,08% de la variance totale, ce qui permet de capturer efficacement les principales tendances des données.
+ 
+  L’analyse visuelle met en évidence une différence marquée entre les 50 top aéroports et l’ensemble des 75 000 aéroports mondiaux. Les grandes infrastructures, notamment des pistes plus longues, sont concentrées dans les principaux aéroports, tandis que la majorité des aéroports mondiaux présentent des pistes plus courtes et homogènes. Cela signifie que les top aéroports ont des pistes plus longues, ce qui indique plusieurs observations possibles : leurs pistes sont conçues pour les avions transcontinentaux qui ont besoin de pistes plus longues pour décoller et atterrir ; ils investissent davantage dans l'infrastructure pour construire des « hubs » pour toutes sortes de vols. 
 
   Les graphiques des variables et des individus confirment une corrélation positive entre le revenu national et le nombre de passagers. Les pays les plus riches développent généralement de grandes infrastructures aéroportuaires pour répondre à une demande accrue en transport aérien. Toutefois, des exceptions notables apparaissent :  
 - Certains pays à revenu limité enregistrent un trafic élevé, souvent grâce à leur rôle de hubs régionaux ou à leur dépendance au tourisme.  
 - À l’inverse, des pays avec des infrastructures avancées présentent un trafic faible, suggérant des inefficacités ou une demande insuffisante. 
 
-Important de noter : pour une analyse plus approfondie, nous avons besoin de données sur un plus grand nombre d'aéroports, et pas seulement sur les plus importants. Cette analyse pourra donc être améliorée à l'avenir. 
-
-  La matrice de corrélation met en évidence des relations importantes :  
-- Le revenu national et le nombre de passagers sont fortement corrélés, traduisant leur interdépendance.  
-- Les dimensions des pistes (longueur et largeur) sont étroitement liées entre elles, mais elles n’entretiennent pas de relation significative avec le revenu national ou le trafic passagers. Cela montre que l’investissement dans les infrastructures ne garantit pas automatiquement une augmentation du trafic aérien. D'ailleurs, cela montre que plus la piste est longue, plus elle doit être large, ce qui est logique et peut être prouvé par cette analyse. 
+  Important de noter : pour une analyse plus approfondie, nous avons besoin de données sur un plus grand nombre d'aéroports, et pas seulement sur les plus grands. Cette analyse pourra donc être améliorée à l'avenir. 
  
 # ** Conclusion **
 
@@ -138,8 +124,7 @@ kable(missing_values, format = "latex",
 
 ```
 
-Les resultats montrent que presque toutes les variables n'ont pas de valeurs manquantes à l'exception de X,Y,frequency, runway_length_ft, runway_width_ft, runway_lighted, runway_closed. Pour notre part, nous nous attarderons sur les variables comme 
-C
+Les resultats montrent que presque toutes les variables n'ont pas de valeurs manquantes à l'exception de X,Y,frequency, runway_length_ft, runway_width_ft, runway_lighted, runway_closed. Pour notre part, nous nous attarderons sur les variables comme "iso_country".
  
 ```{r,echo=FALSE} 
 table(data$type)
